--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.39.2",
+    "scss": "^0.2.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
