--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.21.4",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.39.2",
     "scss": "^0.2.4",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
