--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "mdbreact": "^5.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
+    "react-checkmark": "^1.4.0",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.39.2",
     "scss": "^0.2.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
